--- a/index.html
+++ b/index.html
@@ -393,24 +393,61 @@
             100% { box-shadow: 0 0 0 0 rgba(244, 63, 94, 0); }
         }
 
-        /* Responsive Adjustments */
+        /* Responsive Adjustments - Mobile Optimized */
         @media (max-width: 768px) {
-            .controls {
-                width: 100%;
-                left: 0;
-                bottom: 0;
-                border-radius: 20px 20px 0 0;
-                border-bottom: none;
-                max-height: 40vh;
+            /* Re-structure layout for mobile */
+            #simulation-container {
+                display: flex;
+                flex-direction: column;
             }
-            .data-overlay {
-                top: auto;
-                bottom: 42vh; /* Position above controls */
-                right: 1rem;
-                width: auto;
-                background: rgba(15, 23, 42, 0.8);
+
+            canvas {
+                flex: 1; /* Takes all available upper space */
+                height: 0; /* Allow shrinking */
             }
+
+            .top-bar {
+                top: 0.5rem; left: 0.5rem; right: 0.5rem;
+            }
+
+            .app-title { padding: 0.5rem 1rem; }
+            .app-title h1 { font-size: 0.9rem; }
             .app-title span { display: none; }
+            .btn { width: 36px; height: 36px; }
+
+            .controls {
+                /* Stacked at bottom, taking physical space (not floating over canvas) */
+                position: relative;
+                width: 100%;
+                max-height: 40vh; /* Limit height */
+                left: auto; bottom: auto;
+                border-radius: 20px 20px 0 0;
+                box-shadow: 0 -4px 20px rgba(0,0,0,0.05);
+                z-index: 90;
+                flex-shrink: 0; /* Don't shrink */
+            }
+
+            /* Compact Data Bar */
+            .data-overlay {
+                top: 4rem; /* Below header */
+                left: 0.5rem; right: 0.5rem;
+                width: auto;
+                background: rgba(255, 255, 255, 0.9);
+                backdrop-filter: blur(8px);
+                padding: 0.5rem;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                align-items: center;
+                gap: 0.5rem;
+                box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            }
+            
+            .data-overlay .section-header { display: none; }
+            .data-item { margin-bottom: 0; font-size: 0.75rem; }
+            .data-value { font-size: 0.8rem; }
+            .tir-alert { margin-top: 0.25rem; width: 100%; font-size: 0.7rem; padding: 0.25rem; }
+
             .modal-content {
                 width: 95%;
                 padding: 1.25rem;
