Force update: Add version log to verify mobile fix deployment

--- a/index.html
+++ b/index.html
@@ -620,6 +620,9 @@
  * Designed for performance and clarity.
  */
 
+// Versio: Mobile Fix 1.0
+console.log("Versio: Mobile Fix 1.0 - Loaded");
+
 class LightSimulation {
     constructor(canvasId) {
         this.canvas = document.getElementById(canvasId);
