Update refraction terminology and variable symbols

--- a/index.html
+++ b/index.html
@@ -531,15 +531,15 @@
         <div class="glass-panel data-overlay">
             <div class="section-header">Mittaukset</div>
             <div class="data-item">
-                <span>Tulokulma (&theta;<sub>1</sub>)</span>
+                <span>Tulokulma (&alpha;<sub>1</sub>)</span>
                 <span id="disp-theta1" class="value-display">30.0&deg;</span>
             </div>
             <div class="data-item">
-                <span>Taittumiskulma (&theta;<sub>2</sub>)</span>
+                <span>Taitekulma (&alpha;<sub>2</sub>)</span>
                 <span id="disp-theta2" class="value-display">--</span>
             </div>
             <div class="data-item">
-                <span>Suhde (n<sub>1</sub>/n<sub>2</sub>)</span>
+                <span>Suhde (n<sub>2</sub>/n<sub>1</sub>)</span>
                 <span id="disp-ratio" class="value-display">0.67</span>
             </div>
             <div id="tir-alert" class="tir-alert">
